--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                   class="bg-gray-700 text-white p-2 rounded-md transition hover:bg-blue-700 focus:outline-none focus:ring focus:border-blue-300">View
                   Profile</button>
             </div>
-            <div v-if="userData">
+            <div v-if="loading" class="max-w-sm mx-auto bg-gray-800 p-4 rounded-md animate-pulse">
+               <div class="bg-gray-700 h-12 w-full rounded mb-2"></div>
+               <div class="bg-gray-700 h-4 w-3/4 rounded mb-2"></div>
+               <div class="bg-gray-700 h-4 w-1/2 rounded mb-2"></div>
+            </div>
+            <div v-else-if="userData">
                <div class="max-w-sm mx-auto bg-gray-800 p-4 rounded-md">
                   <img :src="userData.avatar_url" alt="Avatar" class="rounded-full mb-4 w-40 h-40 mx-auto">
                   <h2 class="text-xl font-bold">{{ userData.name }}</h2>
@@ -41,17 +46,21 @@
             el: '#app',
             data: {
                username: 'limitedYusuf',
-               userData: null
+               userData: null,
+               loading: false
             },
             methods: {
                async getUserProfile() {
                   if (this.username) {
+                     this.loading = true;
                      try {
                         const response = await fetch(`https://api.github.com/users/${this.username}`);
                         this.userData = await response.json();
                      } catch (error) {
                         console.error('Error fetching user profile:', error);
                         this.userData = null;
+                     } finally {
+                        this.loading = false;
                      }
                   } else {
                      alert('Please enter a GitHub username.');
