--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                <div class="bg-gray-700 h-4 w-3/4 rounded mb-2"></div>
                <div class="bg-gray-700 h-4 w-1/2 rounded mb-2"></div>
             </div>
-            <div v-else-if="userData">
-               <div class="max-w-sm mx-auto bg-gray-800 p-4 rounded-md">
+            <div v-else>
+               <div v-if="userData" class="max-w-sm mx-auto bg-gray-800 p-4 rounded-md">
                   <img :src="userData.avatar_url" alt="Avatar" class="rounded-full mb-4 w-40 h-40 mx-auto">
                   <h2 class="text-xl font-bold">{{ userData.name }}</h2>
                   <p class="text-gray-400">{{ userData.bio }}</p>
@@ -36,6 +36,16 @@
                      <li><strong>Terpaksa Follow:</strong> {{ userData.following }} Orang</li>
                      <li><strong>Total Repo Pemula:</strong> {{ userData.public_repos }} Biji</li>
                   </ul>
+               </div>
+               <div v-else-if="search && username && !loading && userData === null"
+                  class="max-w-sm mx-auto flex items-center flex-col bg-gray-800 p-4 rounded-md">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="80px" height="80px" fill="none"
+                     stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                     <circle cx="12" cy="12" r="10" />
+                     <line x1="15" y1="9" x2="9" y2="15" />
+                     <line x1="9" y1="9" x2="15" y2="15" />
+                  </svg>
+                  <p class="text-gray-400 mt-2">Tidak ada username ini di GitHub</p>
                </div>
             </div>
          </div>
@@ -47,6 +57,7 @@
             data: {
                username: 'limitedYusuf',
                userData: null,
+               search: false,
                loading: false
             },
             methods: {
@@ -55,10 +66,17 @@
                      this.loading = true;
                      try {
                         const response = await fetch(`https://api.github.com/users/${this.username}`);
-                        this.userData = await response.json();
+                        if (response.status === 200) {
+                           this.userData = await response.json();
+                           this.search = true;
+                        } else {
+                           this.userData = null;
+                           this.search = true;
+                        }
                      } catch (error) {
                         console.error('Kok gak ada => ', error);
                         this.userData = null;
+                        this.search = true;
                      } finally {
                         this.loading = false;
                      }
