init: remove dummy

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
          new Vue({
             el: '#app',
             data: {
-               username: 'limitedYusuf',
+               username: '',
                userData: null,
                followers: null,
                repos: null,
