--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="mb-4 flex flex-col items-center">
                <input v-model="username"
                   class="bg-gray-800 border p-2 rounded-md text-white w-80 transition focus:outline-none focus:ring focus:border-blue-300 mb-3"
-                  placeholder="(misal Yusuf tampan)" required>
+                  placeholder="(misal yusuf_tampan_rupawan)" required>
                <button @click="getUserProfile"
                   class="bg-gray-700 text-white p-2 rounded-md transition hover:bg-blue-700 focus:outline-none focus:ring focus:border-blue-300">Penasaran
                   yaa...</button>
